# xcompressor

./: .gitignore  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  eslint.config.mjs  nuxt.config.ts  package.json  pnpm-lock.yaml
.github/: FUNDING.yml
.github/workflows/: build-desktop.yml  deploy-pages.yml  publish-release.yml
app/: app.vue
app/assets/css/: main.css
app/components/: ActivityBatch.vue  AppUpdates.vue  BatchMonitor.vue  BatchOutput.vue  GifEditor.vue  IntroPanel.vue  JobConfigurator.vue  ResourcePlanner.vue  SourceQueue.vue
app/pages/: app.vue  credits.vue  index.vue  support.vue
app/types/: interfaces.ts
app/utils/: app-ui.ts  app.autodownloader.ts
docs/: architecture.md  end-user-notice.md  open-source-release-checklist.md  releasing.md  system.md
public/: CNAME
scripts/: generate_icons.py  set-version.mjs
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/resources/ffmpeg/: README.md
src-tauri/src/: batch.rs  batch_control.rs  bootstrap.rs  lib.rs  main.rs  metrics.rs  preview.rs  updater.rs
