[package]
name = "xcompressor"
version = "0.1.8"
description = "Desktop multimedia compressor"
authors = ["xyden"]
license = ""
repository = "https://github.com/Cyden-Mnara/xcompressor"
categories = ["compression", "multimedia::video"]
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "xcompressor_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.9.5", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-log = "2"
tauri-plugin-updater = "2"
sysinfo = "0.33"
url = "2"
